--- a/08-github-and-version-control.Rmd
+++ b/08-github-and-version-control.Rmd
@@ -15,6 +15,13 @@ Git is often used in conjunction with GitHub, which is an online platform to hel
 - If you are already familiar with Git, you can reference the summary at the end of [Section B](https://sp19.datastructur.es/materials/guides/using-git#b-local-repositories-narrative-introduction).
 - If you have made a mistake in Git, you can refer to this [article](https://sethrobertson.github.io/GitFixUm/fixup.html) to undo, fix, or remove commits in git.
 
+There have been some great articles in PLOS Computational Biology that describe using GitHub for academic research. These papers are great introductions and summary of best practices!
+
+Blischak JD, Davenport ER, Wilson G. A Quick Introduction to Version Control with Git and GitHub. _PLoS Comput Biol._ 2016;12: e1004668. https://www.ncbi.nlm.nih.gov/pubmed/26785377 
+
+Perez-Riverol Y, Gatto L, Wang R, Sachsenberg T, Uszkoreit J, Leprevost F da V, et al. Ten Simple Rules for Taking Advantage of Git and GitHub. _PLoS Comput Biol._ 2016;12: e1004947. https://www.ncbi.nlm.nih.gov/pubmed/27415786
+
+
 ## Git Branching
 
 A terrific overview of branching workflow and its rationale is here: https://guides.github.com/introduction/flow/
